--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -2,11 +2,14 @@ nav{
     @include gradient(right);
     @include flex(row, space-between, flex-end);
     padding: .7rem;
-    width: 100%;
+    width: calc(100% + 25px);
+    position: relative;
+    left: -12.6px;
+    top: -7px;
     height: 70px;
     font-size: 16px;
     border-radius: 25px 25px 7px 7px;
-    margin-bottom: .6rem;
+    margin-bottom: .3rem;
     
     .fa{
         font-size: 18px;
@@ -14,8 +17,8 @@ nav{
     }
     
     img{
-         height: 25px;
-         width: 25px;
+         height: 30px;
+         width: 30px;
          border: 1px solid $pale-voilet;
          border-radius: 50%;
      }
