--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,9 +6,9 @@
 }
 
 body{
-    background-color: #fcfcfc;
-    overflow-x: hidden;
-    min-height: 100vh;
+    background-color: #f7f5f5;
+    overflow-X: hidden;
+    position: relative;
 
     &::before{
         content: '';
@@ -25,8 +25,9 @@ body{
 }
 .container{
     @include flex(column, center, center);
-    height: 100vh;
-    max-width: 100vw;
+    min-height: 100vh;
+    margin-bottom: 1rem;
+    max-width: 98vw;
     padding: 1rem;
     margin: 0 auto;
 
@@ -34,7 +35,7 @@ body{
 @import 'phone';
 @import 'nav';
 .main-text{
-    width: 98%;
+    width: 90%;
     text-align: center;
 
     h1{
@@ -50,10 +51,12 @@ body{
 }
 
 .attribution { 
-    margin: 3rem .5rem;
+    margin: 3rem .5rem 0 .5rem;
     text-align: center;
     font-size: 11px; 
     width: 100%;
+    position: relative;
+    bottom: .5rem;
     
     
     a { color: hsl(228, 45%, 44%); }
