--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -44,7 +44,9 @@ $font-weights: (
     @content;
   }
 }
-
-@mixin name {
-  
+@mixin  media-sm {
+  @media only screen and (min-width: 500px) {
+    @content;
+  }
 }
+
