--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@ body{
     background-color: #f7f5f5;
     overflow-x: hidden;
     max-width: 100vw;
+    font-family: "Rubik", sans-serif;
 
     &::before{
         content: '';
